# tdg-rust

./: .dockerignore  .gitignore  AGENTS.md  AUDIT-2026-06-18.md  AUDIT_REPORT.md  COMPREHENSIVE-GAP-ANALYSIS.md  Cargo.toml  Dockerfile  Dockerfile.cross  GAP-ANALYSIS.md  HERMES-INTEGRATION.md  PORTING-PLAN.md  PYTHON_VS_RUST_AUDIT.md  README.md  TDG_UPGRADE_PLAN.md  UPDATED_AUDIT.md  UPGRADE-PLAN.md  docker-compose.yml  install.sh  lifeos.config.json  upgrade-plan.md
.superpowers/sdd/: task-2-report.md
benches/: critical_paths.rs
config/: diagnostic_thresholds.yaml  tdg.example.yaml
docs/: CURRENT-STATE.md  HOLONIC-SCIENCE-AUDIT-AND-REFACTOR-PLAN.md  NEURAL-PLASTICITY-AUDIT-AND-REFACTOR-PLAN.md  NEURO-BIO-AUDIT-V2.md  ONTOLOGICAL-ALIGNMENT-AUDIT-V2.md  ONTOLOGICAL-ALIGNMENT-AUDIT-V3.md  ONTOLOGICAL-ALIGNMENT-AUDIT.md  PONYTAIL-AUDIT-AND-OPTIMIZATION-PLAN.md  TDG-COMPUTATIONAL-DESIGN.md
docs/archive/: COMPREHENSIVE-GAP-ANALYSIS.md  CRATE_RESEARCH.md  MCP-TOKEN-OPTIMIZATION.md  REFACTOR-PLAN-V3.md  REFACTOR-PLAN-v2.md  REFACTOR-PLAN.md
docs/archive/pre-refactor/: BUG-FIX-PLAN.md  FORWARD-DEVELOPMENT-PLAN.md  GAP-ANALYSIS.md  TDG-RUST-FRAGMENTATION-REPORT.md  UPDATED_AUDIT.md
docs/plans/: 2026-06-30-c2-fix-blocking-sqlite-in-async.md
graphify-out/: graph.json
plugins/tdg/: __init__.py  plugin.yaml
scripts/: deploy-vps.sh  llm_provider_replacement.rs
src/: audit.rs  circuit_breaker.rs  clustering.rs  config.rs  digestion.rs  error.rs  flow.rs  graph_algorithms.rs  graph_projection.rs  holon.rs  hrr.rs  hrr_retriever.rs  knowledge.rs  lib.rs  main.rs  models.rs  ops.rs  scale_codes.rs  schema.rs  telearchy.rs  test_utils.rs  validation.rs  visualization.rs
src/context/: context_pack.rs  mod.rs  validation.rs
src/db/: crud.rs  events.rs  mod.rs  pool.rs  schema.rs  write_guard.rs
src/eventsourcing/: mod.rs
src/grammar/: auto_wire.rs  mod.rs  node_grammar.rs
src/holonic_types/: archetypes.rs  mod.rs  type_validation.rs
src/llm/: anthropic.rs  config.rs  fallback.rs  mod.rs  ollama.rs  openai.rs
src/maintenance/: archiver.rs  enricher.rs  janitor.rs  linker.rs  mod.rs  monitor.rs  orchestrator.rs
src/mcp/: health.rs  helpers.rs  mod.rs  params.rs  protocol.rs  server.rs  synthesis_helpers.rs  tests.rs  tools.rs  trust.rs
src/metabolism/: attractor.rs  greater_cycle.rs  health.rs  lesser_cycle.rs  mod.rs  worker.rs
src/mind/: consolidation_engine.rs  data_loader.rs  diagnostic.rs  embedding.rs  feeling.rs  graph_mind.rs  injector.rs  lifecycle.rs  metrics.rs  mod.rs  project_tracker.rs  pulse.rs  reflect_engine.rs  sections.rs  state.rs  terrain.rs
src/plugins/: entity_extractor.rs  hybrid_retriever.rs  mod.rs  preference_extractor.rs  turn_capture.rs
src/score/: mod.rs
src/scripts/: mod.rs
src/util/: math.rs  mod.rs  quadrants.rs  stopwords.rs
tests/: e2e_mind_simulation.rs  integration.rs  mcp_e2e.rs  plugin_integration.rs  proptest_fuzz.proptest-regressions  proptest_fuzz.rs  proptest_graph.proptest-regressions  proptest_graph.rs  scripts_integration.rs  trust_persistence.rs  write_guard_integration.rs
