[package]
name = "tdg-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the Teleological Developmental Graph (TDG) memory infrastructure"
license = "MIT"
repository = "https://github.com/ishan-parihar/tdg-rust"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# HTTP/SSE (MCP transport)
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures = "0.3"

# Linear algebra (HRR)
ndarray = { version = "0.16", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Environment
dotenvy = "0.15"
shellexpand = "3"

# Hashing (for vector similarity)
ahash = "0.8"

# LLM (Ollama)
reqwest = { version = "0.12", features = ["json"] }

# Random (for HRR)
rand = "0.8"

# Regex (for plugins)
regex = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
