[package]
name = "tdg-rust"
version = "0.2.0"
edition = "2021"
description = "Rust implementation of the Teleological Developmental Graph (TDG) memory infrastructure"
license = "MIT"
repository = "https://github.com/ishan-parihar/tdg-rust"

[dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
sqlite-vec = "0.1"

# HTTP/SSE (MCP transport)
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Linear algebra (HRR)
ndarray = { version = "0.16", features = ["serde"] }
rustfft = "6.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Environment
dotenvy = "0.15"
shellexpand = "3"

# Configuration (YAML + JSON + env vars)
figment = { version = "0.10", features = ["yaml", "toml", "json", "env"] }

# LLM (Ollama)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Random (for HRR)
rand = "0.8"

# Regex (for plugins)
regex = "1"

# SHA-256 (for reflect engine fingerprints)
sha2 = "0.10"

# File locking (inter-process write guard)
fs4 = "1"

# Temp file support (used by test_utils which is pub mod)
tempfile = "3"

# Graph algorithms
petgraph = { version = "0.8", features = ["serde-1"] }
rustworkx-core = "0.17"
leiden-rs = "0.8"

# MCP protocol
rmcp = { version = "1.7.0", features = ["server", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars = "1.2.1"

# ONNX embedding engine (optional)
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.21", optional = true }
async-trait = "0.1.89"

# GGUF embedding engine (optional — EmbeddingGemma-300M, 768-dim)
llama_cpp = { version = "0.3", optional = true }

[features]
onnx = ["dep:ort", "dep:tokenizers"]
gguf = ["dep:llama_cpp"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"
tokio-test = "0.4.5"
proptest = "1"
mockall = "0.14"
fake = { version = "3", features = ["derive", "chrono", "uuid"] }
insta = { version = "1.48", features = ["json", "yaml", "redactions"] }

[[bench]]
name = "critical_paths"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
